# prior-auth-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
app/: __init__.py  config.py  env.py  main.py  models.py
app/prompts/: prior_auth_answer.txt
app/services/: answer_generator.py
ml/: evidence_scorer.py  train_evidence_scorer.py
ml/checkpoints/: evidence_scorer_latest.joblib  scaler_latest.joblib
sample_data/: demo_request.json  example_request.json  patient_data.json  zepbound_question_set.json
scripts/: __init__.py  generate_patient_data.py
tests/: test_answers.py  test_evidence_scorer.py
